fix: reduce padding to make it look better on mobile devices

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 body {
-    padding-block: 50vh;
+    padding-block: 20vh;
     text-align: center;
     font-size: 2em;
 }
